heroku deploy first try

--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="app.css">
-
-    <meta charset="UTF-8">
-    <title>Demo</title>
-</head>
-<body>
-
-<h1>hi</h1>
-
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Aurelia Navigation Skeleton</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="/"><link href="styles.css" rel="stylesheet"></head><body aurelia-app="main"><div class="splash"><div class="message">Aurelia Navigation Skeleton</div><i class="fa fa-spinner fa-spin"></i></div><script type="text/javascript" src="aurelia-bootstrap.fea86a4b39ce3fd4b448.bundle.js"></script><script type="text/javascript" src="aurelia.93403bc6ed24989c8e5e.bundle.js"></script><script type="text/javascript" src="app.f456db9b2ecfe7273ca4.bundle.js"></script></body></html>
